--- a/Landing Page/indexPage.html
+++ b/Landing Page/indexPage.html
@@ -16,8 +16,8 @@
         <div>
         <nav class="menu">
             <a href="#links">🍓Links</a>
-            <a href="#" target="_blank"> 🍓Descripción detallada</a>
-            <a href="#" target="_blank"> 🍓Perfiles</a>
+            <a href="https://www.canva.com/design/DAGe67OutZ8/a1xfu4GlKnXJa1KPEzygJw/view?utm_content=DAGe67OutZ8&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hc5c90eecf1" target="_blank"> 🍓Descripción detallada</a>
+            <a href="https://berrylandds.carrd.com" target="_blank"> 🍓Perfiles</a>
         </nav>
         </div>
     </header>
@@ -28,7 +28,7 @@
                 <p>˙⋆.˚🍰 Bienvenid@ a nuestra página web ⋅˚₊‧<bold style="color: rgb(125, 59, 100);"> 𝐵𝑒𝑟𝑟𝑦𝐿𝑎𝑛𝑑𝑠 </bold>‧₊˚. 🍰⋆.˚<br> Descubre todos los detalles de nuestro pequeño proyecto audiovisual e interactivo.</p>
                 <p>Toda la información necesaria se encuentra en los links de la parte superior. <br>Para más informacion o cualquier pregunta, no dudes en <a href="#finalDePagina">𝙘𝙤𝙣𝙩𝙖𝙘𝙩𝙖𝙧𝙣𝙤𝙨!</a><br> ദ്ദി(˵ •̀ ᴗ - ˵ )</p>
 
-            <a href="#" target="_blank">
+            <a href="Page1.png" target="_blank">
                 <button class="order-button">Galería de juego</button> 
             </a>
         </div>
