--- a/Landing Page/indexPage.html
+++ b/Landing Page/indexPage.html
@@ -16,7 +16,7 @@
         <div>
         <nav class="menu">
             <a href="#links">🍓Links</a>
-            <a href="https://www.canva.com/design/DAGe67OutZ8/a1xfu4GlKnXJa1KPEzygJw/view?utm_content=DAGe67OutZ8&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hc5c90eecf1" target="_blank"> 🍓Descripción detallada</a>
+            <a href="https://berrylandsinfo.carrd.co/" target="_blank"> 🍓Descripción detallada</a>
             <a href="https://berrylandds.carrd.com" target="_blank"> 🍓Perfiles</a>
         </nav>
         </div>
@@ -28,7 +28,7 @@
                 <p>˙⋆.˚🍰 Bienvenid@ a nuestra página web ⋅˚₊‧<bold style="color: rgb(125, 59, 100);"> 𝐵𝑒𝑟𝑟𝑦𝐿𝑎𝑛𝑑𝑠 </bold>‧₊˚. 🍰⋆.˚<br> Descubre todos los detalles de nuestro pequeño proyecto audiovisual e interactivo.</p>
                 <p>Toda la información necesaria se encuentra en los links de la parte superior. <br>Para más informacion o cualquier pregunta, no dudes en <a href="#finalDePagina">𝙘𝙤𝙣𝙩𝙖𝙘𝙩𝙖𝙧𝙣𝙤𝙨!</a><br> ദ്ദി(˵ •̀ ᴗ - ˵ )</p>
 
-            <a href="Page1.png" target="_blank">
+            <a href="https://berrylandsmockup.carrd.co/" target="_blank">
                 <button class="order-button">Galería de juego</button> 
             </a>
         </div>
@@ -51,7 +51,7 @@
         <div class="product-card">
             <img src="bolsa.png" alt="Bolsa">
             <h3>๋࣭ ⭑Tarjeta Carrd๋࣭  ⭑</h3>
-            <a href="https://github.com/ntk26007/BerryLands?tab=readme-ov-file" target="_blank">★ Link aquí</a>
+            <a href="https://berrylandsdiagramas.carrd.co/" target="_blank">★ Link aquí</a>
         </div>
     </section>
 
