--- a/Landing Page/indexPage.html
+++ b/Landing Page/indexPage.html
@@ -40,17 +40,17 @@
     <section class="products"  id="links" class="destino">
         <div class="product-card">
             <img src="cat.png" alt="Cat">
-            <h3>๋࣭ ⭑Proyecto en GitHub๋࣭  ⭑</h3>
+            <h3>๋࣭ ⭑Proyecto en GitHub˙✧˖</h3>
             <a href="https://github.com/ntk26007/BerryLands?tab=readme-ov-file" target="_blank">★ Link aquí</a>
         </div>
         <div class="product-card">
             <img src="dog.png" alt="Dog">
-            <h3>๋࣭ ⭑Tablero de Trello๋࣭  ⭑</h3>
+            <h3>๋࣭ ⭑Tablero de Trello˙✧˖</h3>
             <a href="https://trello.com/b/RhGjuMhR/proyecto-integrador" target="_blank">★ Link aquí</a>
         </div>
         <div class="product-card">
             <img src="bolsa.png" alt="Bolsa">
-            <h3>๋࣭ ⭑Tarjeta Carrd๋࣭  ⭑</h3>
+            <h3>๋࣭ ⭑Tarjeta Carrd˙✧˖</h3>
             <a href="https://berrylandsdiagramas.carrd.co/" target="_blank">★ Link aquí</a>
         </div>
     </section>
@@ -58,8 +58,8 @@
     <section class="contact" id="finalDePagina" class="destino">
           <div class="info-item">
             <h3>🌷Email</h3>
-            <p>˚𓍢ִ✧˚⋆LuciaPasc@berrylands.com</p>
-            <p>˚𓍢ִ✧˚⋆AliciaValverde@berrylands.com</p>
+            <p>˚˙✧˖˚LuciaPasc@berrylands.com</p>
+            <p>˚˙✧˖˚AliciaValverde@berrylands.com</p>
         </div>
         <div class="info-item">
             <h3>🌷Teléfono</h3>
